--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&family=Karla:wght@200;400;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="root"></div>
-        <script src="index.pack.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
